--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "check-types",
+  "name": "check-ts-types",
   "version": "0.0.1",
   "description": "Check typescript type definitions for dependencies",
   "keywords": [
